--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,10 @@ jobs:
         with:
           distribution: temurin
           java-version: "17"
-
+          
+      - name: Debug – list files
+        run: ls -R
+        
       - name: Build with Maven
         run: mvn clean package -DskipTests
 
