--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,22 +1,12 @@
 name: Build and Push to ECR
 
 on:
-  workflow_dispatch:        # <– manual trigger from GitHub UI
+  workflow_dispatch:        # manual trigger from GitHub UI
 
 env:
   AWS_REGION: us-east-1
-  AWS_ACCOUNT_ID: 146713998391
+  AWS_ACCOUNT_ID: "146713998391"
   ECR_REPO: my-app
-
-      - name: Build with Maven
-        run: mvn clean package -DskipTests
-      - name: Debug – show files
-        run: |
-          pwd
-          ls -la
-
-      - name: Build with Maven
-        run: mvn -f pom.xml clean package -DskipTests
 
 jobs:
   build-and-push:
@@ -31,12 +21,15 @@ jobs:
         with:
           distribution: temurin
           java-version: "17"
-          
-      - name: Debug – list files
-        run: ls -R
-        
+
+      # Debug: confirm pom.xml is present in this directory
+      - name: Debug – show files
+        run: |
+          pwd
+          ls -la
+
       - name: Build with Maven
-        run: mvn clean package -DskipTests
+        run: mvn -f pom.xml clean package -DskipTests
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
@@ -57,7 +50,6 @@ jobs:
 
       - name: Tag and push to ECR
         run: |
-          IMAGE_TAG=${IMAGE_TAG}
           ECR_URI=${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/${ECR_REPO}
           docker tag ${ECR_REPO}:${IMAGE_TAG} ${ECR_URI}:${IMAGE_TAG}
           docker push ${ECR_URI}:${IMAGE_TAG}
